# ShaderRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ShaderRenderer.sln
ShaderRenderer/: CMakeLists.txt  ShaderRenderer.vcxproj
ShaderRenderer/Debug/: glad.lib  stb_image.lib
ShaderRenderer/ShaderRenderer.dir/Debug/: ShaderRenderer.exe.recipe  ShaderRenderer.ilk
ShaderRenderer/ShaderRenderer.dir/Debug/ShaderRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ShaderRenderer/Shaders/: main.glsl
ShaderRenderer/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
ShaderRenderer/src/: Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
ShaderRenderer/stb_image.dir/Debug/stb_image.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
